// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stack renders dividers when instructed to do so: dividers="primary" 1`] = `
<div
  class="box display-flex flexDirection-column width-full"
  data-testid="stack"
>
  <div>
    one
  </div>
  <hr
    class="weight-primary box"
  />
  <div>
    two
  </div>
  <hr
    class="weight-primary box"
  />
  <div>
    three
  </div>
</div>
`;

exports[`Stack renders dividers when instructed to do so: dividers="secondary" 1`] = `
<div
  class="box display-flex flexDirection-column width-full"
  data-testid="stack"
>
  <div>
    one
  </div>
  <hr
    class="weight-secondary box"
  />
  <div>
    two
  </div>
  <hr
    class="weight-secondary box"
  />
  <div>
    three
  </div>
</div>
`;

exports[`Stack renders dividers when instructed to do so: dividers="tertiary" 1`] = `
<div
  class="box display-flex flexDirection-column width-full"
  data-testid="stack"
>
  <div>
    one
  </div>
  <hr
    class="weight-tertiary box"
  />
  <div>
    two
  </div>
  <hr
    class="weight-tertiary box"
  />
  <div>
    three
  </div>
</div>
`;
